# LoanAgents_SmartLoans

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_loanagents-smartloans.yml
agents/: __init__.py
agents/borrower/: __init__.py  agent.py  prompt.py
agents/contract/: __init__.py  agent.py  prompt.py
agents/face_validation/: __init__.py  agent.py  prompt.py
agents/id_document/: __init__.py  agent.py  prompt.py
agents/lender/: __init__.py  agent.py  prompt.py
agents/negotiation/: __init__.py  agent.py  prompt.py
agents/orchestrator/: __init__.py  agent.py
agents/recommendation/: __init__.py  agent.py  prompt.py
agents/risk/: __init__.py  agent.py  prompt.py
config/: settings.py
tests/: test_negotiation_agent.py
tools/: backend_api.py
