[project]
name = "loanagents-smartloans"
version = "0.1.0"
description = "SmartLoans AI Loan Agents — ADK multi-agent negotiation layer, independent from smartloans_backend"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=0.3.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
